# attoparsec-isotropic

./: .gitignore  LICENSE  README.md  attoparsec-isotropic.cabal  attoparsec-isotropic.cabal.template  attoparsec-monoidal.cabal  attoparsec-monoidal.cabal.template  attoparsec.cabal  cabal.project.local  changelog.md  default.nix  gen-cabal.sh  hie.yaml  trace-embrace.yaml
Data/: Attoparsec.hs
Data/Attoparsec/: ByteString.hs  Combinator.hs  Internal.hs  Number.hs  Text.hs  Types.hs  Zepto.hs
Data/Attoparsec/ByteString/: Char8.hs  Internal.hs  Lazy.hs
Data/Attoparsec/Internal/: Types.hs
Data/Attoparsec/Text/: Internal.hs  Lazy.hs
benchmarks/: Aeson.hs  Alternative.hs  Benchmarks.hs  Common.hs  Genome.hs  HeadersText.hs  IsSpace.hs  Links.hs  Numbers.hs  TextFastSet.hs  Warp.hs
benchmarks/HeadersByteString/: Atto.hs
benchmarks/warp-3.0.1.1/Network/Wai/Handler/Warp/: ReadInt.hs  RequestHeader.hs
examples/: Atto_RFC2616.hs  Parsec_RFC2616.hs  RFC2616.hs
internal/Data/Attoparsec/ByteString/: Buffer.hs  FastSet.hs
internal/Data/Attoparsec/Internal/: Compat.hs  Fhthagn.hs
internal/Data/Attoparsec/Text/: Buffer.hs  FastSet.hs
nix/: default.nix  local.sources.json  sources.json
nix/haskell/: overlay.nix
tests/: QC.hs
tests/QC/: Buffer.hs  ByteString.hs  ByteStringRightToLeft.hs  Combinator.hs  CombinatorRight.hs  Common.hs  MonoidalScientific.hs  Rechunked.hs  Simple.hs  Text.hs
tests/QC/IPv6/: Internal.hs
tests/QC/Text/: Regressions.hs
